--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           USER_ID: 247847130
           USER_TOKEN: ${{ secrets.USER_TOKEN }}
           REPO: "netease-music-card"
-          AUTHOR: "MegumiJK"
+          AUTHOR: "yujiadong24"
